# mpci

./: LICENSE  README.md  pyproject.toml
mpci/alyx/: pipeline.py  tasks.py
mpci/chronic/registration/: scanimage.py  task.py
mpci/chronic/roicat/: task.py
mpci/masknmf/: task.py
mpci/scanimage/: __init__.py  io.py
mpci/suite2p/: task.py
mpci/sync/: timeline.py
mpci/tests/: test_registration.py  test_scanimage.py  test_suite2p.py  test_sync.py
